# GMM4TB

./: .gitignore  LICENSE  README.md  pyproject.toml
Artificial_mixture_creation/: f2m.sh  f2m_parallel.sh  fastq_gen.sh  freebayes.sh  freebayes_parallel.sh  jsonfile_gen.sh  seqtk.sh  seqtk_main.py  seqtk_main_parallel.py  seqtk_new.sh  test.sh
Example_output/profiles/: DRR184902.gatk.mix.json  DRR185019.gatk.mix.json  ERR037469.gatk.mix.json  ERR067707.gatk.mix.json  ERR067732.gatk.mix.json  ERR108127.gatk.mix.json  ERR108464.gatk.mix.json  ERR108465.gatk.mix.json  ERR108512.gatk.mix.json  clinical_mixed_sample.txt
Executable/: gmm_model.py  gmm_model_multi.py  main.py  main_multi.py  tb_profiler copy.py  tb_profiler.py  test.ipynb  trial.vcf
Executable/gmm_model_tbp/: gmm_model_multi.py  main_multi.py  new_exclusion.bed  variant_calling_from_fastq.py
Executable/gmm_model_tbp/cache/: gmm_model_multi_BICattempt.py  stand_alone_test.txt  stand_alone_test_out.csv
Executable/results/: ERR6634978-ERR6635032-3070.mix.json
cache/: setup.py  stand_alone.py
gmm4tb/: gmm_model_multi.py  main_multi.py  stand_alone_test_out.csv  tb_profiler.py
test_data/: ERR6634978-ERR6635032-1090.results.json  ERR6634978-ERR6635032-2080.results.json  ERR6634978-ERR6635032-3070.results.json  ERR6634978-ERR6635032-3070.vcf.gz.tbi  ERR6634978-ERR6635032-4060.results.json  ERR6634978-ERR6635032-5050.results.json  ERR6635386.g.vcf.gz.tbi  ERR6635386.results.json  ERR6635386.vcf.gz.tbi  sample_name.txt
test_data/.ipynb_checkpoints/: ERR6634978-ERR6635032-0100.results-checkpoint.json
(+12 files in other folders)
