[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "toast"
authors = [{name = "Linfeng Wang", email = "linfeng.wang@lshtm.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.scripts]
toast = "toast.main_multi:cli"